# flatline

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  MEMORY.md  NOTICE  README.md  THIRD_PARTY_NOTICES  meson.build  meson_options.txt  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml  zizmor.yml
.sisyphus/evidence/: task-8-assembly-tests.txt  task-8-inspector-tests.txt
benchmarks/xray_layout/: .gitignore  README.md  pyproject.toml  setup.sh
benchmarks/xray_layout/bench/: cli.py  graph_extract.py  metrics.py  render.py  report.py  schema.py  timeout.py
benchmarks/xray_layout/bench/adapters/: INSTALL_domus.md  INSTALL_hola.md  INSTALL_libavoid.md  INSTALL_ogdf.md  INSTALL_ogdf_libavoid.md  INSTALL_ogdf_planarization.md  INSTALL_sugiyama_libavoid.md  INSTALL_wueortho.md  _SPEC.md  _base.py  _libavoid_config.py  domus_adapter.py  hola_adapter.py  install_domus.sh  install_hola.sh  install_libavoid.sh  install_ogdf.sh  install_ogdf_libavoid.sh  install_ogdf_planarization.sh  install_sugiyama_libavoid.sh  install_wueortho.sh  libavoid_adapter.py  ogdf_adapter.py  ogdf_libavoid_adapter.py  ogdf_planarization_adapter.py  sugiyama_libavoid_adapter.py  wueortho_adapter.py
benchmarks/xray_layout/corpus/: build.py
benchmarks/xray_layout/corpus/sources/: large_nested.c  medium_switch.c  small_loop.c  tiny_branch.c  xlarge_state_machine.c
benchmarks/xray_layout/patches/: adaptagrams-swig-setup.patch
benchmarks/xray_layout/schemas/: run.json
benchmarks/xray_layout/tools/: preflight_check.sh
docs/: TODO.md  analyze_ghidra.md  code_style.md  compact_agent.md  compliance.md  create_commit.md  design.md  footprint.md  host_feasibility.md  planning.md  preplanning.md  refine_plan.md  refinement_v2_analysis.md  release_notes.md  release_review.md  release_workflow.md  roadmap.md  specs.md  step_roadmap.md  wheel_matrix.md
docs-site/: getting-started.md  index.md  installation.md
docs-site/explanation/: architecture.md  isa-support.md
docs-site/how-to/: analysis-budget.md  enriched-output.md  enumerate-languages.md  handle-errors.md  index.md  load-from-binary.md  session-management.md
docs-site/reference/: api.md  constants.md  enriched.md  errors.md  index.md  models.md  request-result.md  session.md
docs-site/xray/: cpg.md  index.md  tutorial.md
docs/adr/: README.md  adr-001.md  adr-002.md  adr-003.md  adr-004.md  adr-005.md  adr-006.md  adr-007.md  adr-008.md  adr-009.md  adr-010.md  adr-011.md  adr-012.md  adr-013.md  adr-014-relicense-to-gplv3-and-vendor-ogdf-libavoid.md
docs/ai/: analyze_ghidra.md  coherency.md  create_commit.md  refine_plan.md
docs/archived/: README.md  footprint-0.1.1-baseline.md  roadmap.md  specs.md
notes/: enrichment_wishlist.md  ghidra_action_pipeline.md  ghidra_varnode_internals.md
notes/api/: decompiler_inventory.md  mvp_contract.md
notes/experiments/: E1_compile_driver.md  E2_init_minimal.md  E3_decompile_known_func.md  E4_invalid_address.md
notes/r2ghidra/: integration_map.md
src/flatline/: __init__.py  _artifacts.py  _bridge.py  _bridge_payloads.py  _compliance.py  _errors.py  _flatline_native.cpp  _flatline_native_memory.cpp  _flatline_native_pcode.cpp  _flatline_native_session.cpp  _flatline_native_shared.cpp  _footprint.py  _models.py  _models_enriched.py  _models_request.py  _models_types.py  _release.py  _runtime_data.py  _session.py  _version.py  _windows.py  meson.build
src/flatline/_native_layout/: __init__.py
src/flatline/bridge/: __init__.py  _coercion_utils.py  core.py  payloads.py
src/flatline/models/: __init__.py  enriched.py  enums.py  request.py  types.py  varnodes.py
src/flatline/models/pcode_ops/: __init__.py  _base.py  arithmetic.py  bitwise.py  boolean.py  branch.py  call.py  comparison.py  copy.py  dataflow.py  highlevel.py  memory.py
src/flatline/native/: disasm.cpp  memory.cpp  memory.h  module.cpp  ogdf_optimal_hierarchy_cluster_stub.cpp  pcode.cpp  session.cpp  session.h  shared.cpp  shared.h
src/flatline/native/ogdf/basic/internal/: config_autogen.h
src/flatline/runtime/: __init__.py  discovery.py  windows.py
src/flatline/xray/: __init__.py  __main__.py  _arrowhead_scale.py  _canvas.py  _cpg_overlay.py  _cpg_routing.py  _edge_anchoring.py  _edge_routing.py  _edge_routing_legacy.py  _edge_slots.py  _graph_window.py  _inputs.py  _inspector.py  _layout.py  _overlay_pipeline.py  _routing_context.py  _theme.py  _unified_routing.py
src/ghidralib/: __init__.py  _errors.py  _models.py  meson.build
tests/: README.md  _native_fixtures.py  conftest.py
tests/contract/: test_api_contract_spec.py  test_session_contract_spec.py
tests/fixtures/: README.md  fx_add_arm64.hex  fx_add_elf32.hex  fx_add_elf64.hex  fx_add_mips32.hex  fx_add_riscv64.hex  fx_delay_slot_branch_mips32.hex  fx_delay_slot_call_mips32.hex  fx_external_call_arm64.hex  fx_switch_elf64.hex  fx_warning_elf64.hex  generate_hex_fixtures.py
tests/integration/: test_integration_spec.py  test_typed_hierarchy_integration_spec.py
tests/negative/: test_negative_spec.py
tests/regression/: _layout_helpers.py  test_layout_determinism.py  test_layout_golden.py  test_layout_perf.py  test_layout_structural.py  test_regression_spec.py
tests/specs/: fixtures.md  test_catalog.md
tests/unit/: _bridge_doubles.py  _xray_support.py  test_artifact_audit_spec.py  test_bridge_adapter_spec.py  test_bridge_session_edges_spec.py  test_bridge_session_failure_spec.py  test_ci_workflow_spec.py  test_compliance_spec.py  test_devtool_layout_spec.py  test_file_size_policy_spec.py  test_footprint_spec.py  test_lint_tox_env_spec.py  test_native_bridge_runtime_spec.py  test_native_tox_env_spec.py  test_pcode_enums_spec.py  test_pcode_ops_hierarchy_spec.py  test_public_contract_spec.py  test_release_ci_workflow_spec.py  test_release_notes_spec.py  test_release_review_spec.py  (+20 more)
tools/: artifacts.py  compliance.py  footprint.py  prune_dist.py  regenerate_layout_goldens.py  release.py  validate_layout_json.py
v0.1.1/: 404.html  index.html  objects.inv
v0.1.2/: 404.html  index.html  objects.inv
(+72 files in other folders)
