[build-system]
requires = ["meson-python >= 0.17", "meson >= 1.6", "nanobind >= 2.0"]
build-backend = "mesonpy"

[project]
name = "flatline"
version = "0.1.1.dev1"
description = "Python wrapper around the Ghidra decompiler"
requires-python = ">= 3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
dependencies = [
    "ghidra-sleigh",
]

[project.optional-dependencies]
test = [
    "pytest >= 8.0",
    "PyYAML >= 6.0",
]
lint = [
    "ruff >= 0.9",
]
docs = [
    "mkdocs-material >= 9.0",
    "mkdocstrings[python] >= 0.24",
    "mike >= 2.0",
]
dev = [
    "flatline[test,lint]",
    "build >= 1.2",
    "tox >= 4.0",
]

# -- pytest ----------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Pure-logic tests with no native dependencies (U-xxx)",
    "contract: Schema/type stability tests (C-xxx)",
    "integration: End-to-end with real decompiler (I-xxx)",
    "regression: Output/latency stability baselines (R-xxx)",
    "negative: Error-path / rejection tests (N-xxx)",
    "requires_native: Needs compiled flatline._flatline_native importable in this test env",
]
# Show skip reasons in short summary; verbose on CI
addopts = "-ra"

# -- ruff ------------------------------------------------------------------
[tool.ruff]
target-version = "py314"
line-length = 99
src = ["src", "tests", "tools"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific (includes RUF001-003: ambiguous unicode)
    "PLC2401", # non-ascii-name
    "PLC2403", # non-ascii-import-name
]

[tool.ruff.lint.isort]
known-first-party = ["flatline", "flatline_dev"]

# -- meson-python ----------------------------------------------------------
[tool.meson-python.args]
setup = ["--vsenv"]

# -- cibuildwheel ----------------------------------------------------------
[tool.cibuildwheel]
build = "cp313-* cp314-*"
skip = "*-win32 *-win_arm64 *-musllinux_*"
build-frontend = "build"
config-settings = {setup-args = ["-Dnative_bridge=enabled", "--vsenv"]}
test-command = "python {project}/tools/flatline_dev/wheel_smoke.py"

[tool.cibuildwheel.linux]
archs = "x86_64 aarch64"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
before-all = "yum install -y zlib-devel"

[tool.cibuildwheel.windows]
archs = "AMD64"
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
archs = "x86_64 arm64"
before-all = "brew uninstall --ignore-dependencies llvm@18 2>/dev/null || true; brew install zlib"

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "11.0"

# -- tox -------------------------------------------------------------------
[tool.tox]
requires = ["tox >= 4.0"]
env_list = ["py313", "py314", "lint"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
package = "wheel"
wheel_build_env = ".pkg-{env_name}"
extras = ["test"]
commands = [
    ["pytest", { replace = "posargs", default = ["-ra"], extend = true }],
]

[tool.tox.env.dev]
package = "skip"
extras = []
# Mirrors [project.optional-dependencies].test; duplicated because
# package = "skip" prevents using extras.
deps = ["pytest >= 8.0", "PyYAML >= 6.0"]
set_env = {PYTHONPATH = "{toxinidir}/src:{toxinidir}/tools"}
commands = [
    ["pytest",
     "tests/unit/test_compliance_spec.py",
     "tests/unit/test_footprint_spec.py",
     "tests/unit/test_release_workflow_spec.py",
     "tests/unit/test_artifact_audit_spec.py",
     { replace = "posargs", default = ["-ra"], extend = true }],
]

[tool.tox.env.lint]
package = "skip"
extras = []
# Mirrors [project.optional-dependencies].lint; duplicated because
# package = "skip" prevents using extras.
deps = ["ruff >= 0.9"]
commands = [
    ["ruff", "check", "src/", "tests/", "tools/"],
    ["ruff", "format", "--check", "src/", "tests/", "tools/"],
    ["clang-format", "--dry-run", "-Werror", "src/flatline/_flatline_native.cpp"],
]
allowlist_externals = ["clang-format"]

[tool.tox.env.py313]
base_python = "python3.13"

[tool.tox.env.py314]
base_python = "python3.14"

# Host-feasibility lanes must fail hard if the native bridge does not build.
[tool.tox.env.py314-native]
base_python = "python3.14"
wheel_build_env = ".pkg-py314-native"

[tool.tox.env.".pkg-py314-native"]
base_python = "python3.14"
pass_env = ["VCPKG_INSTALLATION_ROOT"]
config_settings_prepare_metadata_for_build_wheel = {"setup-args" = "-Dnative_bridge=enabled"}
config_settings_build_wheel = {"setup-args" = "-Dnative_bridge=enabled"}
